# libjwt

./: configure.ac
examples/: Makefile.am
libjwt/: Makefile.am  libjwt-gnutls.pc.in  libjwt-ossl.pc.in
tests/: Makefile.am  gnutls_tests.mk  ossl_tests.mk
